trunk/Archive2/94/69e72a9d00eea3/output
main.cpp:1:29: error: expected nested-name-specifier before 'class'
 template< template<typename class C>, typename class T>
                             ^
main.cpp:1:35: error: two or more data types in declaration of 'parameter'
 template< template<typename class C>, typename class T>
                                   ^
main.cpp:1:37: error: expected 'class' before ',' token
 template< template<typename class C>, typename class T>
                                     ^
main.cpp:1:48: error: expected nested-name-specifier before 'class'
 template< template<typename class C>, typename class T>
                                                ^
main.cpp:1:54: error: two or more data types in declaration of 'parameter'
 template< template<typename class C>, typename class T>
                                                      ^
main.cpp:2:18: error: 'C' is not a template
 void bRedChannel(C<T> src, C<T> out)
                  ^
main.cpp:2:28: error: 'C' is not a template
 void bRedChannel(C<T> src, C<T> out)
                            ^
main.cpp: In function 'void bRedChannel(C, C)':
main.cpp:2:23: error: 'src' has incomplete type
 void bRedChannel(C<T> src, C<T> out)
                       ^
main.cpp:1:35: error: forward declaration of 'class C'
 template< template<typename class C>, typename class T>
                                   ^
main.cpp:2:33: error: 'out' has incomplete type
 void bRedChannel(C<T> src, C<T> out)
                                 ^
main.cpp:1:35: error: forward declaration of 'class C'
 template< template<typename class C>, typename class T>
                                   ^
